fix(ZNTA-2679) alignment of project list items

--- a/server/zanata-frontend/src/app/styles/frontend-jsf.less
+++ b/server/zanata-frontend/src/app/styles/frontend-jsf.less
@@ -22,6 +22,11 @@ body.bodyStyle {
   }
   .list__item__content .projectList {
     padding-bottom: 0 !important;
+    height: 3rem !important;
+  }
+  .stats--mini .stats__figure {
+    font-size: 1.75em;
+    padding-top: 1rem !important;
   }
   #copy-trans-modal {
     .button--group input[type="radio"] + .button--success {
